syntax = "proto3";

option csharp_namespace = "DACS.Grpc.Server";

package grpc_service;

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloResponse {
  string message = 1;
}

//
message QuadraticEquationRequest {
  double a_coeff = 1;
  double b_coeff = 2;
  double c_coeff = 3;
}

//
message QuadraticEquationResponse {
  double x1 = 1;
  double x2 = 2;
}

// The greeting service definition.
service GrpcService {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloResponse);
  // Solves a quadratic equation
  rpc SolveQuadraticEquation(QuadraticEquationRequest) returns (QuadraticEquationResponse);
}
